# concrete-strength

./: .gitignore  README.md  REPORT.ipynb  _check_leakage.py  _list_cells.py  convert_to_notebook.py  diagnose_transfer.py  export_checkpoints.py  final_report_notebook.ipynb  main.py  main_work.py  new_final_report.ipynb  new_final_report.py  old_final_report.py  predict.py  presentation.html  pyproject.toml  report_notebook.py  requirements.txt  run_ablation.py  run_bonus_fewshot_time.py  run_bonus_multiprop.py  run_bonus_transfer.py  run_comparison.py  run_ensemble.py  run_experiment.py  run_feature_importance.py  run_final_t28.py  run_hparam_search.py  run_long_gan.py  run_physics_gan.py  run_push_below9.py  run_robust_stacking.py  run_stacking.py  run_transfer.py  show_results.py  test_data_pipeline.py  test_fast_gan.py  test_input.csv  train_v2.py
checkpoints/: ablation_no_dropout.pt  ablation_results.json  ablation_sup_s42.pt  ablation_sup_s43.pt  ablation_sup_s44.pt  ablation_with_dropout.pt  disc_sup_lr0.0005_h256x128x64x32_d0.1.pt  disc_sup_lr0.0005_h256x128x64x32_d0.1_bnn.pt  disc_sup_lr0.001_h128x64x32_d0.1.pt  disc_sup_lr0.001_h128x64x32_d0.1_bnn.pt  disc_sup_lr0.001_h256x128x64x32_d0.1.pt  disc_sup_lr0.001_h256x128x64x32_d0.1_bnn.pt  ensemble_results.json  fewshot_results.json  final_t28_results.json  gan_sup_lr0.0002_h256x128x64_d0.1_glr0.0001.pt  gan_sup_lr0.0002_h256x128x64_d0.1_glr0.0002.pt  gan_sup_lr0.0002_h256x128x64_d0.1_glr5e-05.pt  gan_sup_lr0.0005_h256x128x64x32_d0.1_glr0.0001.pt  gan_sup_lr0.0005_h256x128x64x32_d0.1_glr0.0002.pt  gan_tune.json  (+42 more)
(+81 files in other folders)
