[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materialgen"
version = "0.1.0"
description = "Concrete strength prediction with GAN + NEAT + BNN"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=2.0",
    "pyro-ppl>=1.9",
    "neat-python>=0.92",
    "scikit-learn>=1.3",
    "cloudpickle>=3.0",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
colab = []

[project.scripts]
materialgen = "materialgen.cli:main"

[tool.setuptools.packages.find]
include = ["materialgen*"]
